--- a/public/login.html
+++ b/public/login.html
@@ -491,7 +491,7 @@
                 </div>
                 
                 <button type="button" class="signin-button" onclick="login()">Sign In</button>
-                <div id="loginError" style="margin-top:12px;color:#dc3545;font-weight:600;display:none;">Invalid credentials. Please try again.</div>
+                <div id="loginError" style="margin-top:12px;color:#dc3545;font-weight:600;display:none;"></div>
             </form>
         </div>
     </div>
