--- a/public/admin-side/receptionist/checkoutdetails.html
+++ b/public/admin-side/receptionist/checkoutdetails.html
@@ -282,17 +282,18 @@
                                         <label class="form-label small">E-mail Address</label>
                                         <input type="email" id="emailAddress" class="form-control form-control-sm" readonly>
                                     </div>
-                                    <div class="col-md-8">
-                                        <label class="form-label small">Address</label>
-                                        <input type="text" id="address" class="form-control form-control-sm" readonly>
-                                    </div>
                                     <div class="col-md-2">
-                                        <label class="form-label small">Adults</label>
+                                        <label class="form-label small">Guest Counts</label>
                                         <input type="number" id="adults" class="form-control form-control-sm" readonly>
                                     </div>
-                                    <div class="col-md-2">
-                                        <label class="form-label small">Kids</label>
-                                        <input type="number" id="kids" class="form-control form-control-sm" readonly>
+
+                                    <div class="col-md-4">
+                                        <label class="form-label small">Check-In Date</label>
+                                        <input type="date" id="check_in" class="form-control form-control-sm" readonly>     
+                                    </div>
+                                    <div class="col-md-4">
+                                        <label class="form-label small">Check-Out Date</label>
+                                        <input type="date" id="check_out" class="form-control form-control-sm" readonly>
                                     </div>
                                 </div>
 
@@ -435,9 +436,11 @@
             document.getElementById('lastName').value = nameParts.slice(1).join(' ') || '';
             document.getElementById('contactNumber').value = b.guest?.contact_number || b.contact_number || '';
             document.getElementById('emailAddress').value = b.guest?.email || b.email || '';
-            document.getElementById('address').value = b.guest?.address || b.address || '';
             document.getElementById('adults').value = b.adults || '0';
-            document.getElementById('kids').value = b.kids || '0';
+            document.getElementById('check_in').value = b.check_in || '';
+            document.getElementById('check_out').value = b.check_out || '';
+
+
 
             // Populate room information
             roomsBody.innerHTML = '';
