--- a/public/admin-side/admin/usermanagement.html
+++ b/public/admin-side/admin/usermanagement.html
@@ -334,7 +334,15 @@
                         
                         <div class="mb-3">
                             <label class="form-label">Name <span class="text-danger">*</span></label>
-                             <input type="text" class="form-control" name="name" placeholder="Full Name" minlength="2" required>
+                             <input 
+                             type="text" 
+                             class="form-control" 
+                             name="name" 
+                             placeholder="Full Name" 
+                             minlength="2" 
+                            pattern="[A-Za-z\s]+"
+                            title="Name should contain only letters"
+                             required>
                              <small class="form-text text-muted">At least 2 characters</small>
                         </div>
                         <div class="mb-3">
@@ -353,7 +361,7 @@
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Contact Number <span class="text-danger">*</span></label>
-                            <input type="tel" class="form-control" name="phone_number" placeholder="+63 9XX XXX XXXX" minlength="10" required>
+                            <input type="number" class="form-control" name="phone_number" placeholder="+63 9XX XXX XXXX" minlength="10" required>
                              <small class="form-text text-muted">At least 10 digits</small>
                         </div>
                         <div class="row g-3">
